# prime-loot-bulk-claimer-lol

./: .gitignore  Cargo.toml  README.md  build.sh
captchasolver/: Cargo.toml  build.sh
captchasolver/src/: main.rs
src/: captcha.rs  chars.rs  main.rs  miniquad.rs
