[package]
name = "LoLClaimerAmazon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = "1.23.0"

[profile.dev]
opt-level = 1
strip = "symbols"
lto = true
panic = "abort"

[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1

