[package]
name = "lolclaimeramazon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.12.0"
image = "0.24.5"
percent-encoding = "2.2.0"
rand = "0.8.5"
regex = "1.7.0"
reqwest = "0.11.13"
thirtyfour = "0.31.0"
tokio = {version = "1.23.0", features = ["full"] }

[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1

